Fix overflow scrolling and sticky search input

--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -11,6 +11,7 @@ body {
 
 main {
   display: flex;
+  height: 100vh;
 }
 
 html {
@@ -30,10 +31,9 @@ header {
 }
 
 section {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  margin: 20px;
-  margin-right: 0;
+  flex: 1;
+  overflow: scroll;
+  padding-bottom: 40px;
+  position: relative;
+  margin-left: 20px;
 }
